--- a/Bipoc/render-templates/layouts/main.hbs
+++ b/Bipoc/render-templates/layouts/main.hbs
@@ -9,16 +9,16 @@
 
 <body>
   {{{body}}}
-  <script src="/event-constants.mjs" type="module"></script>
-  <script src="/event-source.mjs" type="module"></script>
+  <script src="/event-constants.js" type="module"></script>
+  <script src="/event-source.js" type="module"></script>
   <!--<script src="/member.mjs" type="module"></script> -->
   <!--<script src="/member-list-data.mjs" type="module"></script>-->
   <!--<script src="/observable.mjs" type="module"></script>-->
-  <script src="/observer.mjs" type="module"></script>
+  <script src="/observer.js" type="module"></script>
   <!-- <script src="/bipoc-model.mjs" type="module"></script> -->
-  <script src="/bipoc-view.mjs" type="module"></script>
-  <script src="/network-proxy.mjs" type="module"></script>
-  <script src="/bipoc-controller.mjs" type="module"></script>
+  <script src="/bipoc-view.js" type="module"></script>
+  <script src="/network-proxy.js" type="module"></script>
+  <script src="/bipoc-controller.js" type="module"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
