--- a/Bipoc/render-templates/main.hbs
+++ b/Bipoc/render-templates/main.hbs
@@ -52,11 +52,11 @@
           </div>
         </li>
         <li class="list">
-          <div>
+          <div id="button-logout">
             <span class="icon">
               <ion-icon name="log-out-outline"></ion-icon>
             </span>
-            <span class="title" id="button-logout">Sign Out</span>
+            <span class="title">Sign Out</span>
           </div>
         </li>
       </ul>
