--- a/Bipoc/render-templates/layouts/main.hbs
+++ b/Bipoc/render-templates/layouts/main.hbs
@@ -21,4 +21,11 @@
   <script src="/bipoc-controller.js" type="module"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  {{!-- {{#section 'head'}}
+  <script>
+    const div = document.createElement('div');
+    div.appendChild(document.createTextNode('(yay)'));
+    document.querySelector('body');
+  </script>
+  {{/section}} --}}
 </body>
