--- a/Bipoc/render-templates/main.hbs
+++ b/Bipoc/render-templates/main.hbs
@@ -9,7 +9,7 @@
               <ion-icon name="home-outline"></ion-icon>
             </span>
             <span class="title">Home</span>
-            </a>
+          </div>
         </li>
         <li class="list">
           <div>
@@ -17,7 +17,7 @@
               <ion-icon name="person-outline"></ion-icon>
             </span>
             <span class="title">Profile</span>
-            </a>
+          </div>
         </li>
         <li class="list">
           <div>
@@ -25,7 +25,7 @@
               <ion-icon name="chatbox-outline"></ion-icon>
             </span>
             <span class="title">Messages</span>
-            </a>
+          </div>
         </li>
         <li class="list">
           <div>
@@ -33,7 +33,7 @@
               <ion-icon name="people-outline"></ion-icon>
             </span>
             <span class="title">Groups</span>
-            </a>
+          </div>
         </li>
         <li class="list">
           <div>
@@ -41,7 +41,7 @@
               <ion-icon name="settings-outline"></ion-icon>
             </span>
             <span class="title">Settings</span>
-            </a>
+          </div>
         </li>
         <li class="list">
           <div>
@@ -65,10 +65,6 @@
       <ion-icon name="menu-outline" class="open"></ion-icon>
       <ion-icon name="close-circle-outline" class="close"></ion-icon>
     </div>
-
-    {{!-- {{#section 'head'}}
-    {{/section}} --}}
-
 
     <div class="flex-column">
 
